--- a/css/home.css
+++ b/css/home.css
@@ -108,7 +108,7 @@ header {
               color: #bc8d46; }
   header .back-color {
     background-color: #fff;
-    z-index: 20; }
+    z-index: 14; }
     header .back-color .imggosder {
       margin-top: -64px;
       margin-bottom: 25px;
@@ -153,7 +153,7 @@ header {
             left: 10px;
             opacity: 1;
             transition: 0.4s;
-            z-index: 999; }
+            z-index: 99; }
           header .back-color .menyu ul li a {
             text-decoration: none;
             color: #000;
@@ -828,7 +828,8 @@ header {
     display: block;
     position: fixed;
     top: 0;
-    left: 0; }
+    left: 0;
+    z-index: 101; }
   #meals .paellasclick, #meals .paellasclick2, #meals .paellasclick3, #meals .paellasclick4 {
     position: absolute;
     width: 100%;
@@ -877,7 +878,8 @@ header {
     display: block;
     position: fixed;
     top: 0;
-    left: 0; }
+    left: 0;
+    z-index: 100; }
   #meals .breastsclick, #meals .breastsclick2, #meals .breastsclick3, #meals .breastsclick4 {
     position: absolute;
     width: 100%;
@@ -926,7 +928,8 @@ header {
     display: block;
     position: fixed;
     top: 0;
-    left: 0; }
+    left: 0;
+    z-index: 100; }
   #meals .seasclick, #meals .seasclick2, #meals .seasclick3, #meals .seasclick4 {
     position: absolute;
     width: 100%;
@@ -975,7 +978,8 @@ header {
     display: block;
     position: fixed;
     top: 0;
-    left: 0; }
+    left: 0;
+    z-index: 100; }
   #meals .paprikasclick, #meals .paprikasclick2, #meals .paprikasclick3, #meals .paprikasclick4 {
     position: absolute;
     width: 100%;
@@ -1024,7 +1028,8 @@ header {
     display: block;
     position: fixed;
     top: 0;
-    left: 0; }
+    left: 0;
+    z-index: 100; }
   #meals .steaksclick, #meals .steaksclick2, #meals .steaksclick3, #meals .steaksclick4 {
     position: absolute;
     width: 100%;
@@ -1073,7 +1078,8 @@ header {
     display: block;
     position: fixed;
     top: 0;
-    left: 0; }
+    left: 0;
+    z-index: 100; }
   #meals .meal1, #meals .meal2, #meals .meal3, #meals .meal4 {
     display: none;
     position: absolute;
